objects/WT_Automation_Log__c.object
<CustomObject>
    <fields>
        <fullName>WT_Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Dependent_Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependent Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Method_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Process_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Triggering_Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Triggering Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Automation Log</label>
    <listViews>
        <fullName>All_Automation_Logs</fullName>
        <columns>NAME</columns>
        <columns>WT_Class_Name__c</columns>
        <columns>WT_Method_Name__c</columns>
        <columns>WT_Is_Success__c</columns>
        <columns>WT_Dependent_Record_Id__c</columns>
        <columns>WT_Triggering_Record_Id__c</columns>
        <columns>WT_Process_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>All Automation Logs</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Automation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>